<resources>
    <string name="app_name">My Bmi Application</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">BMI計算アプリ</string>
    <string name="heightLabel">身長</string>
    <string name="heightform">cm</string>
    <string name="weightLabel">体重</string>
    <string name="weightForm">kg</string>
    <string name="heightForm">cm</string>
    <string name="buttonCalc">BMI計算！！</string>
    <string name="bmiScore">BMIスコア</string>
</resources>
